# fontit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
fontit/: __init__.py  simsun.py
tests/: test_pillow.py
