[tool.poetry]
name = "fontit"
version = "0.2.1"
description = ""
authors = ["zhangningboo <zhangningbo21@mails.ucas.ac.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
